--- a/sufsara_tutorial.Rmd
+++ b/sufsara_tutorial.Rmd
@@ -42,21 +42,21 @@ Note that unless you log off from the VM, all tasks will continue running. You s
 
 # Optional: accessing the VM from your own machine
 
-The tutorial above allows you to access the VM in-browser. There are, however, alternatives to access the VM directly from your own machine, for which we provide a tutorial below.
+The tutorial above allows you to access the VM in-browser. There are, however, alternatives to access the VM directly from your own machine, for which we provide a tutorial below. There are two main ways to log into your virtual machine (aside from the in-browser option).
 
-<!-- ## Enrol your SSH key -->
+## Option 1: Remote Desktop
 
-<!-- Navigate to your [SRAM profile page](https://sram.surf.nl/profile). Generate an SSH key on your own machine. Paste your *public* SSH key into the text box, and click the "Save" button. You should never paste the *private* key anywhere (it will also not be accepted if you try). -->
+The first option is via the "Remote Desktop" app that is built-into Windows, or an RDP client on the other operating systems. To connect to the VM using the **Remote Desktop** app ('Extern Bureaublad' if you have Dutch language settings), you simply need to specify the IP address of the VM to connect (and potentially dismiss some warnings about missing certificates). You can find the IP address of your VM by pressing the *down* arrow next to 'State: running' on [this page](https://portal.live.surfresearchcloud.nl/). For the next steps, it is the same as the in-browser option.
 
-<!-- Please refer to online tutorials to find/create an SSH key for your machine, like [this one](https://www.howtogeek.com/762863/how-to-generate-ssh-keys-in-windows-10-and-windows-11/) for Windows. -->
+## Option 2: Git Bash
 
-<!-- **Hint**: another easy way to find your SSH key is by running Git GUI on your own machine, through Help → Show SSH Key.  -->
+The second option is through a command line using *Git Bash* using an SSH key, which is the most efficient way of connecting. This is because `ssh` allows forwarding ports to your own computer and the VMs have server software preinstalled.
 
-## Logging into the VM
+First, you need to enroll your SSH key. Navigate to your [SRAM profile page](https://sram.surf.nl/profile). Generate an SSH key on your own machine. Paste your *public* SSH key into the text box, and click the "Save" button. You should never paste the *private* key anywhere (it will also not be accepted if you try).
 
-There are two ways to log into your virtual machine (aside from the in-browser option). The first option is via the "Remote Desktop" app that is built-into Windows, or an RDP client on the other operating systems. The second option is through a command line using *Git Bash*. 
+An easy way to find your SSH key is by running Git GUI on your own machine. For further details, see [tutorial 1](http://geoscripting-wur.github.io/RProjectManagement/).
 
-To connect to the VM using the **Remote Desktop** app ('Extern Bureaublad' if you have Dutch language settings), you simply need to specify the IP address of the VM to connect (and potentially dismiss some warnings about missing certificates). You can find the IP address of your VM by pressing the *down* arrow next to 'State: running' on [this page](https://portal.live.surfresearchcloud.nl/). For the next steps, it is the same as the in-browser option.
+You can now run `ssh -L8787:localhost:8787 yourusername@yourserver.nl` to forward the port 8787 to your own computer, then in your own browser open http://localhost:8787 and immediately get to RStudio Server. This is very efficient, because then you are only sending commands over the internet, and not pictures, which is so much smaller. You also then don't have issues with repeated keystrokes etc. and you can even use RStudio to upload and download files. The downside is that you need to run that one extra command and open a new tab in your browser.
 
 # File saving and sharing
 
